--- a/estilo.css
+++ b/estilo.css
@@ -1,63 +1,110 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 * {
-    font-family: 'Montserra', sans-serif; 
+  font-family: 'Montserra', sans-serif;
+  margin: 0;
+  padding: 0;
 }
-.form{
-    background-color: rgba(169, 169, 169, 0.829);
-    color:black;
+
+.estrutura {
+  margin: 0 20px;
 }
-.form-group{
-    display: flex;
-    flex-direction: row;
-    margin-top: 5px;
+
+fieldset {
+  border-style: none;
+  border-top: 1px solid #000;
+  padding: 10px;
 }
+
+button {
+  background-color: rgb(167, 167, 167);
+  color: rgb(0, 0, 0);
+  margin: 5px;
+  width: auto;
+  padding: 2px 10px;
+  cursor: pointer;
+  border-style: none;
+  border: 1px solid;
+}
+
+.form-button {
+  text-align: center;
+}
+
+.relacao {
+  text-align: center;
+  margin-top: 10px;
+  background-color: rgb(136, 160, 173);
+  height: 30px;
+  margin-bottom: 0px;
+  /*Altura da borda bugada com a vírgula*/
+  border-radius: 3px;
+}
+
+.cadastro {
+  text-align: center;
+  line-height: 30px;
+  margin-top: 10px;
+  background-color: rgb(167, 167, 167);
+  border-radius: 5px 5px 0 0;
+}
+
+.form {
+  background-color: rgba(236, 236, 236, 0.829);
+  color: black;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5px;
+}
+
 .form-group label {
-    width: 125px;
-    font-size: 16px;
-    font-weight: bold;
+  width: 125px;
+  font-size: 15px;
+  font-weight: bold;
 }
-.form-group label.right-inline{
-    text-align: right;
-    padding-right: 10px;
-    padding-left: 10px;
-    width: auto;
+
+.form-group label .right-inline {
+  text-align: right;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: auto;
 }
+
 .form-group .input-control {
-    flex: 1 1 auto;
-    display: block;
-    margin-bottom: 10px;
-    margin-right: 8px;
-    padding: 0px;
-    border-radius: 3px;
+  flex: 1 1 auto;
+  display: block;
+  margin: 0 10px 10px 0;
+  outline: 0;
+  border: 1px solid #000;
+  max-height: 15px;
 }
-button{
-    background-color: rgb(136, 160, 173);
-    color: rgb(0, 0, 0);
-    margin: 10px;
-    border-radius: 5px;
-    margin-top: 10px;
-    width: 100px;
-    height: 25px;
-    cursor: pointer;
-}
+
+
 table.blueTable {
   border: 1px solid #1C6EA4;
   background-color: #EEEEEE;
   width: 100%;
   text-align: left;
   border-collapse: collapse;
-  
+
 }
+
 table.blueTable td, table.blueTable th {
   border: 1px solid #AAAAAA;
   padding: 3px 2px;
 }
+
 table.blueTable tbody td {
   font-size: 13px;
 }
+
 table.blueTable tr:nth-child(even) {
   background: #161e25;
 }
+
 table.blueTable thead {
   background: #1C6EA4;
   background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
@@ -65,15 +112,18 @@ table.blueTable thead {
   background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
   border-bottom: 2px solid #444444;
 }
+
 table.blueTable thead th {
   font-size: 15px;
   font-weight: bold;
   color: #FFFFFF;
   border-left: 2px solid #D0E4F5;
 }
+
 table.blueTable thead th:first-child {
   border-left: none;
 }
+
 table.blueTable tfoot {
   font-size: 14px;
   font-weight: bold;
@@ -84,83 +134,83 @@ table.blueTable tfoot {
   background: linear-gradient(to bottom, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
   border-top: 2px solid #444444;
 }
+
 table.blueTable tfoot td {
   font-size: 14px;
 }
+
 table.blueTable tfoot .links {
   text-align: right;
 }
-table.blueTable tfoot .links a{
+
+table.blueTable tfoot .links a {
   display: inline-block;
   background: #1C6EA4;
   color: #FFFFFF;
   padding: 2px 8px;
   border-radius: 5px;
 }
+
 table.paleBlueRows {
-    border: 1px solid #FFFFFF;
-    width: 100%;
-    height: 80%;
-    text-align: center;
-    border-collapse: collapse;
-  }
-  table.paleBlueRows td, table.paleBlueRows th {
-    border: 1px solid #000000;/*Linhas da tabela*/
-    padding: 3px 2px;
-  }
-  table.paleBlueRows tbody td {
-    font-size: 13px;
-  }
-  table.paleBlueRows tr:nth-child(even) {
-    background: #cacacac9; /*Cor secundaria da tabela*/
-  }
-  table.paleBlueRows thead {/*Borda superior da tabela*/
-    background:rgba(169, 169, 169, 0.87);/*Borda superior da tabela*/
-    border-bottom: 1,5px solid #000000;/*Borda superior da tabela*/
-  }
-  table.paleBlueRows thead th {
-    font-size: 15px;
-    font-weight: bold;
-    color: black;
-    text-align: center;
-    border-left: 1px solid #000000;/*Borda verticais da parte superior da tabela*/
-  }
-  table.paleBlueRows thead th:first-child {
-    border-left: 1;
-    color: #000000;
-    /*Bordas ta tabela*/
-  }
-  table.paleBlueRows tfoot {
-    font-size: 14px;
-    font-weight: bold;
-    color: #333333;
-    background: #D0E4F5;
-    border-top: 3px solid #444444;
-  }
-  table.paleBlueRows tfoot td {
-    font-size: 14px;
-  }
- .form-group label.right-inline {
-    text-align: left;
-    padding-right: 1px;
-    padding-left: 1px;
-  }
- .form-button {
+  border: 1px solid #FFFFFF;
+  width: 100%;
+  height: 80%;
   text-align: center;
+  border-collapse: collapse;
 }
- .relacao {
-   text-align: center;
-   margin-top: 10px;
-   background-color: rgb(136, 160, 173);
-   height: 30px;
-   margin-bottom: 0px; /*Altura da borda bugada com a vírgula*/
-   border-radius: 3px;
+
+table.paleBlueRows td, table.paleBlueRows th {
+  border: 1px solid #000000;
+  /*Linhas da tabela*/
+  padding: 3px 2px;
 }
- .cadastro {
+
+table.paleBlueRows tbody td {
+  font-size: 13px;
+}
+
+table.paleBlueRows tr:nth-child(even) {
+  background: #cacacac9;
+  /*Cor secundaria da tabela*/
+}
+
+table.paleBlueRows thead {
+  /*Borda superior da tabela*/
+  background: rgba(169, 169, 169, 0.87);
+  /*Borda superior da tabela*/
+  border-bottom: 1, 5px solid #000000;
+  /*Borda superior da tabela*/
+}
+
+table.paleBlueRows thead th {
+  font-size: 15px;
+  font-weight: bold;
+  color: black;
   text-align: center;
-  margin-top: 10px;
-  background-color: rgb(136, 160, 173);
-  height: 30px;
-  border-radius: 3px;
-  margin-bottom: -1px;
- }
+  border-left: 1px solid #000000;
+  /*Borda verticais da parte superior da tabela*/
+}
+
+table.paleBlueRows thead th:first-child {
+  border-left: 1;
+  color: #000000;
+  /*Bordas ta tabela*/
+}
+
+table.paleBlueRows tfoot {
+  font-size: 14px;
+  font-weight: bold;
+  color: #333333;
+  background: #D0E4F5;
+  border-top: 3px solid #444444;
+}
+
+table.paleBlueRows tfoot td {
+  font-size: 14px;
+}
+
+.form-group label.right-inline {
+  text-align: left;
+  padding-right: 1px;
+  padding-left: 1px;
+}
